--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -19,6 +19,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.03"/>
 
+    <TextView
+        android:id="@+id/outputInfoTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Результат игры."
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resultTV"
+        app:layout_constraintVertical_bias="0.03"/>
+
     <Button
         android:id="@+id/returnBTN"
         android:layout_width="wrap_content"
@@ -29,7 +41,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resultTV"
+        app:layout_constraintTop_toBottomOf="@+id/outputInfoTV"
         app:layout_constraintVertical_bias="0.02"
         />
 
